fix section-dependency on mobile

--- a/style.css
+++ b/style.css
@@ -613,7 +613,7 @@ p{
 .section-describe__card{
   width: 100%;
 }
-.section-dependendcy__img{
+.section-dependency__img{
   display: none;
 }
 .section-dependency__info{
